improved mechanism to add a person on display by preventing the page to reload + isLoading mechanism control

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,3 +1,10 @@
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vw;
+}
+
 .coordonees {
   margin: 1rem;
   padding: 1rem;
